# chain-reaction

./: CHANGE_LOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml
build-web/: bevy_game.js  index.html
src/: app.rs  book.rs  lib.rs  main.rs  page.rs  reactor.rs  studio.rs
src/app/: achievement.rs  anime_effect.rs  audio.rs  cursor.rs  cursor_icon.rs  element.rs  init.rs  interaction.rs  key_binding.rs  layer.rs  leaderboard.rs  plugin.rs  screenshot.rs  settings.rs  startup.rs  status.rs  theme.rs  timer.rs  ui.rs
src/app/achievement/: achievement_xxx.rs  alpha_xxx.rs  c_chain_xxx.rs  h_chain_xxx.rs  max_c_xxx.rs  max_h.rs  not_moving_xxx_s.rs  score_xxx.rs  time_xxx_s.rs
src/app/anime_effect/: kind.rs  lens.rs  plugin.rs  status.rs
src/app/anime_effect/kind/: circle_q.rs  circle_shoot.rs  line_q.rs  line_shoot.rs  rect_shoot.rs
src/app/audio/: bgm.rs  se.rs  startup.rs
src/app/element/: kind.rs  plugin.rs  startup.rs  status.rs  timer.rs
src/app/element/kind/: cross_panel.rs  menu_entry.rs  sensitivity_demo.rs  slider.rs  (+1 more)
src/app/interaction/: default_focus.rs  handle.rs  plugin.rs
src/app/ui/: kind.rs  plugin.rs  switch_btn.rs  timer.rs
src/book/: page.rs  plugin.rs
src/book/page/: about.rs  achievement.rs  dev.rs  game.rs  help.rs  history.rs  leaderboard.rs  menu.rs  settings.rs
src/page/: about.rs  achievement.rs  auto.rs  dev.rs  game.rs  help.rs  leaderboard.rs  menu.rs  settings.rs
src/reactor/: anime_effect.rs  field.rs  field_ach.rs  formatter.rs  hit.rs  particle.rs  state.rs  status.rs  timer.rs  tmm.rs
src/reactor/anime_effect/: kind.rs  lens.rs
src/reactor/field/: alpha_count.rs  score.rs  timer.rs
src/reactor/particle/: alpha.rs  control.rs  hyper.rs  trigger.rs  uou.rs
src/reactor/state/: demo.rs  ended.rs  paused.rs  ready.rs  running.rs  submit.rs
src/studio/: plugin.rs  property.rs  state.rs  status.rs
src/studio/state/: done.rs  none.rs  paused.rs  preparing.rs  ready.rs  running.rs
wasm/: index.html
(+10 files in other folders)
