[package]
name = "chain-reaction"
version = "3.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-persistent = { version = "0.4.2", features = ["bincode", "json"] }
bevy-ui-navigation = "0.33.1"
bevy_prototype_lyon = "0.10.0"
bevy_tweening = "0.9.0"
chrono = "0.4.31"
circular-queue = "0.2.6"
dirs = "5.0.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
webbrowser = "0.8.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

